chore: enable Hibernate JDBC batching + use List.getFirst()
- application.properties: set hibernate.jdbc.batch_size=50 with
  order_inserts/order_updates=true and batch_versioned_data=true so
  saveAll(N) refunds flush as a single multi-row batch.
- JpaRegistrationWriteAdapter: use List.getFirst() (Java 21+) instead of
  get(0) in the DataIntegrityViolation catch path.